[tool.poetry]
name = "tabletop"
version = "0.1.0"
description = ""
authors = ["David Cramer <dcramer@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.1"
psycopg2-binary = "^2.7"
itsdangerous = "^1.1"
facebook-sdk = "^3.1"
graphene-django = "^2.2"
sentry-sdk = "^0.6.5"
nplusone = "^1.0"
honcho = "^1.0"
gunicorn = "^19.9"
django-heroku = "^0.3.1"
factory-boy = "^2.11"
lxml = "^4.2"
django-enumfields = "^1.0"
pillow = "^9.0"

[tool.poetry.dev-dependencies]
isort = "==4.3.4"
black = "==18.6b4"
flake8 = "^3.6"
pre-commit = "^1.13"
pytest = "^4.0"
pytest-django = "^3.4"
pytest-xdist = "^1.25"
pytest-timeout = "^1.3"

[tool.poetry.scripts]
tabletop = 'tabletop.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
